- Java: make structural punctuation (braces, parens, colon, comma)
  ``Punctuation``, not ``Operator`` (#987)
- Ruby: support squiggly heredocs
- Dart: support ``@`` annotations
- GAS: accept registers in directive arguments
- Dockerfile: accept ``FROM ... AS`` syntax
- Velocity: support silent reference syntax
- Agda: fix lambda highlighting
- Python: recognize ``.jy`` filenames (#976)
- Shell sessions: recognize Virtualenv prompt (PR#1266)
- Image formatter: actually respect ``line_number_separator`` option


Version 2.4.2
-------------
(released May 28, 2019)

- Fix encoding error when guessing lexer with given ``encoding`` option
  (#1438)


Version 2.4.1
-------------
(released May 24, 2019)

- Updated lexers:

  * Coq (#1430)
  * MSDOS Session (PR#734)
  * NASM (#1517)
  * Objective-C (PR#813, #1508)
  * Prolog (#1511)
  * TypeScript (#1515)

- Support CSS variables in stylesheets (PR#814, #1356)
- Fix F# lexer name (PR#709)
- Fix ``TerminalFormatter`` using bold for bright text (#1480)


Version 2.4.0
-------------
(released May 8, 2019)

- Added lexers:

  * Augeas (PR#807)
  * BBC Basic (PR#806)
  * Boa (PR#756)
  * Charm++ CI (PR#788)
  * DASM16 (PR#807)
  * FloScript (PR#750)
  * FreeFem++ (PR#785)
  * Hspec (PR#790)
  * Pony (PR#627)
  * SGF (PR#780)
  * Slash (PR#807)
  * Slurm (PR#760)
  * Tera Term Language (PR#749)
  * TOML (PR#807)
  * Unicon (PR#731)
  * VBScript (PR#673)

- Updated lexers:

  * Apache2 (PR#766)
  * Cypher (PR#746)
  * LLVM (PR#792)
  * Makefiles (PR#766)
  * PHP (#1482)
  * Rust
  * SQL (PR#672)
  * Stan (PR#774)
  * Stata (PR#800)
  * Terraform (PR#787)
  * YAML

- Add solarized style (PR#708)
- Add support for Markdown reference-style links (PR#753)
- Add license information to generated HTML/CSS files (#1496)
- Change ANSI color names (PR#777)
- Fix catastrophic backtracking in the bash lexer (#1494)
- Fix documentation failing to build using Sphinx 2.0 (#1501)