@@ -110,21 +110,23 @@ class PythonLexer(RegexLexer):
             include('builtins'),
             include('magicfuncs'),
             include('magicvars'),
-            ('([rR]|[uUbB][rR]|[rR][uUbB])(""")',
+            # raw strings
+            ('(?i)(rb|br|fr|rf|r)(""")',
              bygroups(String.Affix, String.Double), 'tdqs'),
-            ("([rR]|[uUbB][rR]|[rR][uUbB])(''')",
+            ("(?i)(rb|br|fr|rf|r)(''')",
              bygroups(String.Affix, String.Single), 'tsqs'),
-            ('([rR]|[uUbB][rR]|[rR][uUbB])(")',
+            ('(?i)(rb|br|fr|rf|r)(")',
              bygroups(String.Affix, String.Double), 'dqs'),
-            ("([rR]|[uUbB][rR]|[rR][uUbB])(')",
+            ("(?i)(rb|br|fr|rf|r)(')",
              bygroups(String.Affix, String.Single), 'sqs'),
-            ('([uUbB]?)(""")', bygroups(String.Affix, String.Double),
+            # non-raw strings
+            ('([uUbBfF]?)(""")', bygroups(String.Affix, String.Double),
              combined('stringescape', 'tdqs')),
-            ("([uUbB]?)(''')", bygroups(String.Affix, String.Single),
+            ("([uUbBfF]?)(''')", bygroups(String.Affix, String.Single),
              combined('stringescape', 'tsqs')),
-            ('([uUbB]?)(")', bygroups(String.Affix, String.Double),
+            ('([uUbBfF]?)(")', bygroups(String.Affix, String.Double),
              combined('stringescape', 'dqs')),
-            ("([uUbB]?)(')", bygroups(String.Affix, String.Single),
+            ("([uUbBfF]?)(')", bygroups(String.Affix, String.Single),
              combined('stringescape', 'sqs')),
             include('name'),
             include('numbers'),
