@@ -58,6 +58,7 @@ Version 2.5.0
 - Velocity: support silent reference syntax
 - Agda: fix lambda highlighting
 - Python: recognize ``.jy`` filenames (#976)
+- Python: recogniez ``f`` string prefix (#1156)
 - Shell sessions: recognize Virtualenv prompt (PR#1266)
 - Image formatter: actually respect ``line_number_separator`` option
 
